tests-e2e/tests/package_manager/snapshots/package_manager__cli__add_requires_dependencies.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: the following required arguments were not provided:
  <DEPENDENCY>…

Usage: purescript-alexandrite add [-p --package <NAME>] [--test] <DEPENDENCY>…

For more information, try '--help'.
