tests-e2e/tests/package_manager/snapshots/package_manager__cli__compile_package_requires_value.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [missing_flag_value] · command line:1:14
  •
  │
  • a value is required for '--package <DIR>' but none was supplied
  │
  │ For more information, try '--help'.
  │
  │   iris compile --package
  │                ╰────────
  •
