tests-e2e/tests/package_manager/snapshots/package_manager__cli__compile_requires_input_or_package.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: the following required arguments were not provided:
  [INPUT]…

Usage: alexandrite compile [FLAGS] [INPUT]…

For more information, try '--help'.
