tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_conflicts_with_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [conflicting_flags] · command line:1:1
  •
  │
  • the argument '--config' cannot be used with '--config-file'
  │
  │ Usage: iris [FLAGS] [SUBCOMMAND]
  │
  │ For more information, try '--help'.
  │
  │   iris --config {} --config-file missing.json
  │   ╰──────────────────────────────────────────
  •
