tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_duplicate_program_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:48
  •
  │
  • duplicate field `program`
  │
  │   {"sources":{"kind":"command","program":"first","program":"second"}}
  │                                                  ╰────────
  •
